fixed spacing for difficulty icons

--- a/css/blog_posts.scss
+++ b/css/blog_posts.scss
@@ -7,3 +7,23 @@
 	/*color: #dcae1d;*/
 }
 
+#difficulty
+{
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	flex-wrap: wrap;
+}
+
+//formatting to include my avocado icons
+p.difficulty_item
+{
+	margin: 0px 8px 0px 16px;
+}
+
+img.difficulty_item
+{
+	margin: 0px 2px;
+	height: 22px;
+	width: 22px
+}
